<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="status_button_tweet">Tweet</string>
    <string name="status_button_clear">Clear</string>
    <string name="status_button_smiley">( ͡° ͜ʖ ͡°)</string>
    <string name="status_signature">rootscope</string>
    <string name="status_text_hint">What\'s happening?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tweet">Tweet</string>
    <string name="status_update">Status Update</string>

</resources>
