<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.marakana.yamba.StatusActivity" >

    <EditText
        android:id="@+id/status_text"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/status_button_tweet"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textCount"
        android:layout_toStartOf="@+id/textCount"
        android:ems="10"
        android:hint="@string/status_text_hint"
        android:inputType="textMultiLine"
        android:maxLength="140"
        android:textColor="#FFFFFF" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/status_signature"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/status_text_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="140"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00ff00" />

    <Button
        android:id="@+id/status_button_tweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/status_button_tweet"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/status_button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/editStatus"
        android:layout_alignStart="@+id/editStatus"
        android:text="@string/status_button_clear"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/status_button_smiley"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_toRightOf="@+id/status_button_clear"
        android:layout_toEndOf="@+id/status_button_clear"
        android:text="@string/status_button_smiley"
        android:textColor="#ffffff" />

</RelativeLayout>

